--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                 <a class="nav-link" href="#sectionCuatro">Conviertete en Orador</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" href="#">Comprar tickets</a>
+                                <a class="nav-link active" href="./Pages/tickets.html">Comprar tickets</a>
                             </li>
                         </ul>
                     </div>
@@ -141,10 +141,10 @@
             <form class="form container">
                 <div class="row">
                     <div class="form col-6 nombre">
-                        <input type="text" name="name" id="name" placeholder="Nombre">
+                        <input type="text" name="name" id="name" placeholder="  Nombre">
                     </div>
                     <div class="form col-6 apellido">                  
-                        <input type="text" name="apellido" id="apellido" placeholder="Apellido">
+                        <input type="text" name="apellido" id="apellido" placeholder="  Apellido">
                     </div>
                 </div>
 
